콘솔 다찍어보기
